tests/ui/specialization/min_specialization/bad-const-wf-doesnt-specialize.stderr
error[E0119]: conflicting implementations of trait `Copy` for type `S<_>`
  --> $DIR/bad-const-wf-doesnt-specialize.rs:10:1
   |
LL | impl<const N: i32> Copy for S<N> {}
   | -------------------------------- first implementation here
LL |
LL | impl<const M: usize> Copy for S<M> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `S<_>`

error: the constant `N` is not of type `usize`
  --> $DIR/bad-const-wf-doesnt-specialize.rs:8:29
   |
LL | impl<const N: i32> Copy for S<N> {}
   |                             ^^^^ expected `usize`, found `i32`
   |
note: required for `S<N>` to implement `Clone`
  --> $DIR/bad-const-wf-doesnt-specialize.rs:5:10
   |
LL | #[derive(Clone)]
   |          ^^^^^
LL | struct S<const L: usize>;
   |          ----- unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `Copy`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
   = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0119`.
